<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9A9A9"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A9A9A9"
        android:gravity="center"
        android:text="Add a Tag"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/workout_mode_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_a_tag"
        android:textColor="#ffffff" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <EditText
             android:id="@+id/num_cards_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/add_tag_name"
             android:inputType="text" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/add_tag_name" />

    </LinearLayout>

</LinearLayout>